tests/invalid/bad_shift_imm.s
  .text

  .global _start
_start:
  lsl r0, r0, 100
  